--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+# Good morning
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
